fix align

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,8 @@ nav{
 		justify-content: center;
 		margin: 0 auto;
 		flex-wrap: wrap;
+		font-size: 0.8rem;
+		padding: 0;
 	}
   }
 .nav_list a{
